--- a/9mm Balistics/Desaceleração do Projétil 9 mm.ipynb
+++ b/9mm Balistics/Desaceleração do Projétil 9 mm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "14768f48",
+   "id": "339586da",
    "metadata": {},
    "source": [
     "# Queda de Velocidade ao passar por anteparo de vidro de 1/8'"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a5d1030",
+   "id": "4219840d",
    "metadata": {},
    "source": [
     "## Retirado do vídeo: https://www.youtube.com/watch?v=PD1vkhFO4Dg.\n",
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "51a178a9",
+   "id": "5964a81e",
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "257753b1",
+   "id": "5822c8da",
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "778ac785",
+   "id": "b7fe6951",
    "metadata": {},
    "source": [
     "#### Ajuste Linear:\n",
@@ -144,7 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "5beecbed",
+   "id": "63c88d2d",
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "173f0da1",
+   "id": "d430f80a",
    "metadata": {},
    "source": [
     "### Nomeando as Variáveis:\n",
@@ -192,6 +192,10 @@
     "Inicialmente, temos a equação linear da forma:\n",
     "\n",
     "$$ v = -61.23x + v_0 $$\n",
+    "\n",
+    "mas, façamos  o coeficiente a: (-61.23 / 3.175), pois precisamos do valor em mm.\n",
+    "\n",
+    "$$ v = -19.29x + v_0 $$\n",
     "\n",
     "onde:\n",
     "- $v$ é a velocidade final do projétil (em m/s),\n",
@@ -206,6 +210,14 @@
     "\n",
     "Com esta equação, podemos calcular a velocidade inicial do projétil, dada a sua velocidade final após atravessar uma determinada espessura de vidro.\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "87985f92",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
